CHATS_SIT/force-app/main/default/objects/T_INDIV_TRAIN_INFO__c.object
<CustomObject>
    <description>Parent Training temporary break</description>
   <!-- <enableLicensing>false</enableLicensing>-->
    <fields>
        <fullName>CDE_TYPE_INFO_TRAIN__c</fullName>
        <label>Temporary Break Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00854_BreakType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_TRAIN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Training ID</label>
        <referenceTo>T_INDIV_TRAIN__c</referenceTo>
        <relationshipLabel>Parent Training Temporary Break</relationshipLabel>
        <relationshipName>Parent_Training_Temporary_Break</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parent Training Temporary Break</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Parent Training Temporary Break ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Training Temporary Break</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Activity_Begin_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IDN_TRAIN_INDIV__r.DTE_BEGIN_EFFV__c &gt; DTE_BEGIN_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Effective Begin Date cannot be before the Activity Effective Begin Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Activity_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IDN_TRAIN_INDIV__r.DTE_END_EFFV__c &lt; DTE_END_EFFV__c,   NOT(ISBLANK(IDN_TRAIN_INDIV__r.DTE_END_EFFV__c) ))</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be after the Activity Effective End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Verified_for_ML</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(IDN_TRAIN_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_TRAIN_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c),OR( TEXT(CDE_TYPE_INFO_TRAIN__c )=&apos;ML&apos;, TEXT(CDE_TYPE_INFO_TRAIN__c )=&apos;MPL&apos;), ISBLANK(TEXT( CDE_TYPE_VERIF__c )))</errorConditionFormula>
        <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
        <errorMessage>When Temporary Break Type is medical or maternity/paternity, verified is a required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Begin_Date_Future_validation</fullName>
        <active>true</active>
        <description>Begin Date can not be more than 31 days in future.</description>
        <errorConditionFormula>DTE_BEGIN_EFFV__c &gt; Today()+31</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Begin Date can not be more than 31 days in future</errorMessage>
    </validationRules>
</CustomObject>