CHATS_SIT/force-app/main/default/objects/T_INDIV_TRAIN_INFO__c/validationRules/Activity_Begin_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Begin_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IDN_TRAIN_INDIV__r.DTE_BEGIN_EFFV__c &gt; DTE_BEGIN_EFFV__c</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Effective Begin Date cannot be before the Activity Effective Begin Date</errorMessage>
</ValidationRule>