CHATS_SIT/force-app/main/default/objects/T_INDIV_TRAIN_INFO__c/validationRules/Begin_Date_Future_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_Future_validation</fullName>
    <active>true</active>
    <description>Begin Date can not be more than 31 days in future.</description>
    <errorConditionFormula>DTE_BEGIN_EFFV__c &gt; Today()+31</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Begin Date can not be more than 31 days in future</errorMessage>
</ValidationRule>