CHATS_SIT/force-app/main/default/objects/T_INDIV_TRAIN_INFO__c/validationRules/Required_Verified_for_ML.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Verified_for_ML</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(IDN_TRAIN_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_TRAIN_INDIV__r.IDN_CLIENT__r.Is_CBMS_Data__c),OR( TEXT(CDE_TYPE_INFO_TRAIN__c )=&apos;ML&apos;, TEXT(CDE_TYPE_INFO_TRAIN__c )=&apos;MPL&apos;), ISBLANK(TEXT( CDE_TYPE_VERIF__c )))</errorConditionFormula>
    <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
    <errorMessage>When Temporary Break Type is medical or maternity/paternity, verified is a required field</errorMessage>
</ValidationRule>